Fixed z-index of addbutton and update profile block

--- a/ItCraftApp/src/app/home/addingProduct/addingProduct.component.css
+++ b/ItCraftApp/src/app/home/addingProduct/addingProduct.component.css
@@ -3,6 +3,10 @@ form {
     margin-top: 20px;
 }
 
+.button-container {
+    z-index: 10;
+}
+
 button[type="submit"] {
     width: 116%;
     margin-left: -8%;
@@ -12,16 +16,17 @@ button[type="submit"] {
     border-radius: 10px;
     border-bottom-right-radius: 25px;
     border-bottom-left-radius: 25px;
-    color: #e4e4e4;
+    color: #f0f0f0;
     font-size: 18px;
     font-weight: 700;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 1px 8px rgba(0, 0, 0, 0.6);
     box-sizing: border-box;
-    background: radial-gradient(circle at top, #acb6c4, #8c9aaf);
+    background: radial-gradient(circle at top, #acc6c4, #8c9aaf);
     filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.7));
     z-index: 2;
     transition: 0.2s;
     cursor: pointer;
+    box-shadow: inset 0 0 2px #000000aa;
 }
 
 button[type="submit"]:hover {
@@ -32,6 +37,11 @@ button[type="submit"]:hover {
 button[type="submit"]:active {
     filter: brightness(1.05);
     top: 2px;
+}
+
+button[type="submit"]:disabled {
+    box-shadow: inset 0px 0px 50px #00000050;
+    background: radial-gradient(circle at top, #bcb6c4, #8c9aaf);
 }
 
 .form-group {
